--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,10 +2,12 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="Application">
         <ListPreference
-            android:key=""
-            android:title=""
-            >
-
-        </ListPreference>
+            android:key="theme_preference"
+            android:title="Select Theme"
+            android:summary="Choose the application theme"
+            android:entries="@array/theme_options"
+            android:entryValues="@array/theme_values"
+            android:defaultValue="light"
+            />
     </PreferenceCategory>
 </PreferenceScreen>
