--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -3,8 +3,8 @@
     <PreferenceCategory android:title="Application">
         <ListPreference
             android:key="theme_preference"
-            android:title="Select Theme"
-            android:summary="Choose the application theme"
+            android:title="@string/theme_preference_title"
+            android:summary="@string/theme_preference_summary"
             android:entries="@array/theme_options"
             android:entryValues="@array/theme_values"
             android:defaultValue="light"
