--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -9,5 +9,12 @@
             android:entryValues="@array/theme_values"
             android:defaultValue="light"
             />
+
+        <ListPreference
+            android:key="interface_name"
+            android:title="@string/interface_name_title"
+            android:summary="@string/interface_name_summary"
+            android:defaultValue=""
+            />
     </PreferenceCategory>
 </PreferenceScreen>
