--- a/app/src/main/res/layout/fragment_port_scanner.xml
+++ b/app/src/main/res/layout/fragment_port_scanner.xml
@@ -14,6 +14,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white_50"
         android:hint="Enter IP Address"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,6 +30,8 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white_50"
         android:hint="Enter Ports (e.g., 124,178,13-80)"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
