--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="white_50">#80FFFFFF</color>
+
 
     <color name="red">#ff3300</color>
     <color name="Green_main">#00ff2f</color>
