--- a/app/src/main/res/layout/fragment_port_scanner.xml
+++ b/app/src/main/res/layout/fragment_port_scanner.xml
@@ -8,7 +8,7 @@
     tools:context=".Fragments.PortScannerFragment">
 
     <EditText
-        android:id="@+id/ipEditText"
+        android:id="@+id/ipInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -16,7 +16,7 @@
         android:layout_marginEnd="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white_50"
-        android:hint="Enter IP Address"
+        android:hint="@string/PortScannerFragment_EditText_ipInput_hint"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/portsEditText"
+        android:id="@+id/portInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -32,11 +32,11 @@
         android:layout_marginEnd="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white_50"
-        android:hint="Enter Ports (e.g., 124,178,13-80)"
+        android:hint="@string/PortScannerFragment_EditText_portInput_hint"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ipEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/ipInput" />
 
     <Button
         android:id="@+id/scanButton"
@@ -47,7 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/portsEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/portInput" />
 
     <ScrollView
         android:layout_width="match_parent"
