--- a/app/src/main/res/layout/fragment_port_scanner.xml
+++ b/app/src/main/res/layout/fragment_port_scanner.xml
@@ -14,12 +14,11 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white_50"
         android:hint="@string/PortScannerFragment_EditText_ipInput_hint"
         android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white_50"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,31 +44,28 @@
         android:layout_marginTop="24dp"
         android:text="Scan"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/portInput" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scanButton"
-        app:layout_constraintVertical_bias="0.114">
+        app:layout_constraintTop_toBottomOf="@+id/scanButton">
 
         <TextView
             android:id="@+id/resultTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:textIsSelectable="true"
             android:textColor="@color/Green_main"
+            android:textIsSelectable="true"
             android:textSize="16sp" />
 
     </ScrollView>
