--- a/app/src/main/res/layout/fragment_port_scanner.xml
+++ b/app/src/main/res/layout/fragment_port_scanner.xml
@@ -9,6 +9,8 @@
 
     <EditText
         android:id="@+id/ipInput"
+        style="@style/edit_text_style"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -16,21 +18,20 @@
         android:layout_marginEnd="20dp"
         android:hint="@string/PortScannerFragment_EditText_ipInput_hint"
         android:inputType="text"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white_50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/portInput"
+        style="@style/edit_text_style"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="20dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white_50"
+
         android:hint="@string/PortScannerFragment_EditText_portInput_hint"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
