--- a/app/src/main/res/layout/fragment_arp_spoof.xml
+++ b/app/src/main/res/layout/fragment_arp_spoof.xml
@@ -8,6 +8,9 @@
 
     <EditText
         android:id="@+id/editText"
+
+        style="@style/edit_text_style"
+
         android:hint="Enter IP Address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,6 +23,9 @@
 
     <EditText
         android:id="@+id/editText2"
+
+        style="@style/edit_text_style"
+
         android:hint="Enter MAC Address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,6 +38,9 @@
 
     <EditText
         android:id="@+id/editText3"
+
+        style="@style/edit_text_style"
+
         android:hint="Enter IP Address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,6 +53,9 @@
 
     <EditText
         android:id="@+id/editText4"
+
+        style="@style/edit_text_style"
+
         android:hint="Enter MAC Address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
