--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="text_view_style">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="button_style">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:backgroundTint">@color/white_50</item>
+        <item name="android:radius">20dp</item>
+    </style>
+
     <style name="edit_text_style">
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/white_50</item>
