--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -49,7 +49,7 @@
             <item
                 android:id="@+id/settings"
                 android:icon="@drawable/baseline_settings_24"
-                android:title="Settings"
+                android:title="@string/toolbar_settings"
                 />
         </menu>
 
