--- a/app/src/main/res/layout/fragment_mac_scanner.xml
+++ b/app/src/main/res/layout/fragment_mac_scanner.xml
@@ -8,6 +8,9 @@
 
     <Button
         android:id="@+id/scanButton"
+
+        style="@style/button_style"
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
