--- a/app/src/main/res/layout/fragment_wifi_scanner.xml
+++ b/app/src/main/res/layout/fragment_wifi_scanner.xml
@@ -10,6 +10,9 @@
 
     <Button
         android:id="@+id/scanButton"
+
+        style="@style/button_style"
+
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginLeft="20dp"
