--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,9 +6,10 @@
     </style>
 
     <style name="button_style">
-        <item name="android:textColor">@color/black</item>
-        <item name="android:backgroundTint">@color/white_50</item>
-        <item name="android:radius">20dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/button_border</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
     </style>
 
     <style name="edit_text_style">
