--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -9,13 +9,15 @@
 
     <Spinner
         android:id="@+id/request_type_spinner"
+
+        style="@style/spinner_style"
+
         android:layout_width="100dp"
         android:layout_height="50dp"
 
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
-        android:background="@color/white_50"
         android:entries="@array/request_types"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
