--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
 
     <style name="button_style">
         <item name="android:textColor">@color/white</item>
-        <item name="android:background">@drawable/button_border</item>
+        <item name="android:background">@drawable/white_border</item>
         <item name="android:paddingLeft">10dp</item>
         <item name="android:paddingRight">10dp</item>
     </style>
@@ -15,6 +15,17 @@
     <style name="edit_text_style">
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/white_50</item>
+        <item name="android:background">@drawable/edit_text_background</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="spinner_style">
+
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:dropDownSelector">@color/white</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:padding">10dp</item>
     </style>
 
     <style name="code">
