--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,14 +21,22 @@
 
     <style name="spinner_style">
 
-        <item name="android:textColorHint">@color/white</item>
-        <item name="android:dropDownSelector">@color/white</item>
+        <item name="android:textColorHint">@color/black</item>
         <item name="android:background">@color/white</item>
-        <item name="android:textSize">16sp</item>
         <item name="android:padding">10dp</item>
     </style>
 
     <style name="code">
 
+    </style>
+
+
+    <style name="nav_view_style">
+        <item name="android:background">@color/black</item>
+    </style>`
+
+    <style name="preferences_style">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white_50</item>
     </style>
 </resources>
