--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
 
 
     <color name="red">#ff3300</color>
-    <color name="Green_main">#00ff2f</color>
+    <color name="green_main">#00ff2f</color>
 </resources>
