--- a/app/src/main/res/drawable/arp.xml
+++ b/app/src/main/res/drawable/arp.xml
@@ -1,4 +1,4 @@
 <vector android:height="512dp" android:viewportHeight="24"
     android:viewportWidth="24" android:width="512dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/Green_main" android:fillType="evenOdd" android:pathData="M15,19a1,1 0,0 0,-1 -1H13V17h3a2,2 0,0 0,2 -2V8L13,3H8A2,2 0,0 0,6 5V15a2,2 0,0 0,2 2h3v1H10a1,1 0,0 0,-1 1H2v2H9a1,1 0,0 0,1 1h4a1,1 0,0 0,1 -1h7V19ZM12,4.5 L16.5,9H12Z"/>
+    <path android:fillColor="@color/green_main" android:fillType="evenOdd" android:pathData="M15,19a1,1 0,0 0,-1 -1H13V17h3a2,2 0,0 0,2 -2V8L13,3H8A2,2 0,0 0,6 5V15a2,2 0,0 0,2 2h3v1H10a1,1 0,0 0,-1 1H2v2H9a1,1 0,0 0,1 1h4a1,1 0,0 0,1 -1h7V19ZM12,4.5 L16.5,9H12Z"/>
 </vector>
