--- a/app/src/main/res/layout/fragment_port_scanner.xml
+++ b/app/src/main/res/layout/fragment_port_scanner.xml
@@ -68,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:textColor="@color/Green_main"
+            android:textColor="@color/green_main"
             android:textIsSelectable="true"
             android:textSize="16sp" />
 
