Add detect and add interface name to preferences

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -16,6 +16,7 @@
             android:summary="@string/interface_name_summary"
             android:entries="@array/interface_names"
             android:entryValues="@array/interface_values"
+            android:defaultValue="wlan0"
             />
     </PreferenceCategory>
 </PreferenceScreen>
