--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -43,18 +43,27 @@
         tools:visibility="visible"
         >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:text="GET"
-            android:textColor="@color/white" />
+
 
         <EditText
+            android:id="@+id/get_input_url"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="Enter URL"
+            android:textColorHint="@color/white"
+            android:textColor="@color/green_main"
+            />
+
+        <TextView
+            android:id="@+id/get_responce_TextView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:textColor="@color/white"
+            android:layout_weight="0.6"
+            />
 
         <Button
+            android:id="@+id/send_GET_btn"
             style="@style/button_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
