--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -47,11 +47,12 @@
 
         <EditText
             android:id="@+id/get_input_url"
+
+            style="@style/edit_text_style"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter URL"
-            android:textColorHint="@color/white"
-            android:textColor="@color/green_main"
             />
 
         <TextView
