Mod array string

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -15,7 +15,7 @@
             android:title="@string/interface_name_title"
             android:summary="@string/interface_name_summary"
             android:entries="@array/interface_names"
-            android:entryValues="@array/interface_values"
+            android:entryValues="@array/interface_names"
             android:defaultValue="wlan0"
             />
     </PreferenceCategory>
