--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -27,7 +27,7 @@
 
     <!-- GET -->
     <LinearLayout
-        android:id="@+id/get_layout"
+        android:id="@+id/GET_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
@@ -40,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
-        tools:visibility="visible"
+        tools:visibility="gone"
         >
 
 
@@ -84,7 +84,7 @@
 
     <!-- POST -->
     <LinearLayout
-        android:id="@+id/post_layout"
+        android:id="@+id/POST_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
@@ -97,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <Spinner
             android:id="@+id/POST_content_type"
@@ -146,5 +146,167 @@
             android:layout_gravity="center_horizontal"
             android:text="Send POST" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/PUT_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
+        tools:visibility="gone">
+        <TextView
+            android:textColor="@color/green_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="In process PUT"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/DELETE_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
+        tools:visibility="gone">
+        <TextView
+            android:textColor="@color/green_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="In process DELETE"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/PATCH_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
+        tools:visibility="gone">
+        <TextView
+            android:textColor="@color/green_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="In process PATCH"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/HEAD_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
+        tools:visibility="gone">
+        <TextView
+            android:textColor="@color/green_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="In process HEAD"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/OPTIONS_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
+        tools:visibility="gone">
+        <TextView
+            android:textColor="@color/green_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="In process OPTIONS"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/TRACE_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
+        tools:visibility="gone">
+        <TextView
+            android:textColor="@color/green_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="In process TRACE"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/CONNECT_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/request_type_spinner"
+        tools:visibility="gone">
+        <TextView
+            android:textColor="@color/green_main"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="In process CONNECT"
+            />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
