--- a/app/src/main/res/layout/fragment_wifi_scanner.xml
+++ b/app/src/main/res/layout/fragment_wifi_scanner.xml
@@ -7,6 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.WifiScannerFragment">
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:id="@+id/scanButton"
@@ -43,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/scanButton"
         app:layout_constraintTop_toBottomOf="@+id/scanButton"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
 
 
