--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -121,18 +121,37 @@
             />
 
         <EditText
+            android:id="@+id/post_input_url"
             android:hint="Enter URL"
             style="@style/edit_text_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
         <EditText
+            android:id="@+id/post_data"
             android:hint="Enter POST data"
             style="@style/edit_text_style"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             />
 
+        <!--
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.3"
+            android:padding="25dp"
+            >
+            <TextView
+                android:id="@+id/post_request_TextView"
+                android:text="YOUR POST REQUEST"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textIsSelectable="true"
+                />
+        </ScrollView>
+        -->
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
