--- a/app/src/main/res/layout/fragment_dns_lookup.xml
+++ b/app/src/main/res/layout/fragment_dns_lookup.xml
@@ -1,13 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.DNSLookupFragment">
 
-    <TextView
+    <EditText
+        android:id="@+id/dns_input_ip"
+        style="@style/edit_text_style"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="DNSLookup" />
+        android:layout_height="wrap_content"
+        android:hint="Enter IP"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/dns_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/dns_input_ip"
+        tools:layout_editor_absoluteX="0dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
