--- a/app/src/main/res/layout/fragment_dns_lookup.xml
+++ b/app/src/main/res/layout/fragment_dns_lookup.xml
@@ -7,11 +7,11 @@
     tools:context=".Fragments.DNSLookupFragment">
 
     <EditText
-        android:id="@+id/dns_input_ip"
+        android:id="@+id/dns_input"
         style="@style/edit_text_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter IP"
+        android:hint="@string/DNSLookupFragment_EditText_dns_input_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/dns_input_ip"
+        app:layout_constraintTop_toBottomOf="@+id/dns_input"
         tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
