--- a/app/src/main/res/layout/fragment_dns_lookup.xml
+++ b/app/src/main/res/layout/fragment_dns_lookup.xml
@@ -22,16 +22,16 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/send_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dns_input" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/send_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
