--- a/app/src/main/res/layout/fragment_dns_lookup.xml
+++ b/app/src/main/res/layout/fragment_dns_lookup.xml
@@ -11,26 +11,39 @@
         style="@style/edit_text_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
         android:hint="@string/DNSLookupFragment_EditText_dns_input_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/dns_info"
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/send_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dns_input" />
+        app:layout_constraintTop_toBottomOf="@+id/dns_input"
+        >
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="Test text"
+            style="@style/text_view_info_style"
+            android:id="@+id/dns_info"
+            />
+    </ScrollView>
+
 
     <Button
+        style="@style/button_style"
+
         android:id="@+id/send_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:text="Send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
