--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="text_view_style">
-        <item name="android:textColor">@color/white</item>
+    <style name="text_view_info_style">
+        <item name="android:textColor">@color/green_main</item>
+        <item name="android:layout_margin">10dp</item>
     </style>
 
     <style name="button_style">
