--- a/app/src/main/res/layout/fragment_arp_spoof.xml
+++ b/app/src/main/res/layout/fragment_arp_spoof.xml
@@ -95,4 +95,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/start_spoof_btn" />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/info_view"
+        app:layout_constraintEnd_toEndOf="@+id/info_view"
+        app:layout_constraintStart_toStartOf="@+id/info_view"
+        app:layout_constraintTop_toTopOf="@+id/info_view" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
